--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,24 @@
-venv/
-
-*.iws
-workspace.xml
-tasks.xml
-
-*.pyc
+# Python
 __pycache__/
+*.pyc
 .ipynb_checkpoints/
-
-instance/
-
+*.ipynb
+*.egg-info/
+.mypy_cache/
 .pytest_cache/
 .coverage
-htmlcov/
 
-dist/
-build/
-*.egg-info/
+# Notebooks
+*.ipynb
+.ipynb_checkpoints/
 
-*.db
-*.secrets
-
-# Pycharm & Vscode
-*.idea
+# IDE
 .vscode/
+
+# Project
+/data
+/models/
+/notebooks/
+/reports/
+
+.env
